# MEPHI_ThirdSem_Sorter

./: AbstractSorter.h  CMakeLists.txt
DataToTests/: GeneratedInt100500  GeneratedPerson100
Declaration/Sequence/: ArraySequence.h  DynamicArray.h  LinkedList.h  ListSequence.h  PrintSeq.h  Sequence.h
Declaration/Sequence/TypesOfData/: MyString.h  Person.h
Declaration/Sorter/: AbstractSorter.h  BitonicSorter.h  BubbleSort.h  BubbleSorter.h  InsertionSorter.h  MergeSort.h  MergeSorter.h  PiramidSort.h  PiramidSorter.h  QuickSort.h  QuickSorter.h  ShellSorter.h
Declaration/Tests/: CheckCorrectlySorted.h  GenerateArraySequenceInt.h  GenerateArraySequencePerson.h  GenerateSequencePerson.h  WriteIntToFile.h
Declaration/Tests/UnitTests/: TestBubbleSorter.h
Declaration/TypesOfData/: MyString.h  Person.h
Definition/: main.cpp
Definition/Tests/: CheckCorrectlySorted.cpp  GenerateArraySequenceInt.cpp  GenerateArraySequencePerson.cpp  GenerateListSequenceInt.cpp  GenerateListSequencePerson.cpp  GenerateSequenceInt.cpp  GetNamesAndSournamesToMyString.cpp  WritePersonToFile.cpp
Definition/TypesOfData/: MyString.cpp  Person.cpp
Sequence/: ArraySequence.h  DynamicArray.h  ListSequence.h  Sequence.h  main.cpp
